--- a/src/intro.adoc
+++ b/src/intro.adoc
@@ -10,4 +10,4 @@ Babashka is written for developers who are familiar with Clojure on the JVM. Thi
 
 === Compatibility
 
-Babashka uses the Small Clojure Interpreter, or https://github.com/borkdude/sci/[sci] for short to run programs within a GraalVM-compiled binary. GraalVM gives it it's fast startup and low memory usage characteristics. Source code is not compiled to JVM-byte code first, like in Clojure on the JVM. Despite this difference, babashka aims to be as compatible as possible with the semantics of Clojure. It supports a sufficiently large subset of Clojure: functions, macros, multi-methods, namespaces, most of it is there. At the moment, the main difference with Clojure is lack of support for `defrecord`, `defprotocol` and `reify`. Like a JVM programmer would expect, babashka has support for multi-threading and provides access to commonly used Java packages and classes like `File`, `System`, `java.io` and `java.net`. Because babashka uses interpretation instead of compilation, some longer running programs may be slower, despite the benefit of fast startup. If that turns out to be the case, your efforts are not in vain: the code you wrote still runs with Clojure!
+Babashka uses the Small Clojure Interpreter, or https://github.com/borkdude/sci/[sci] for short to run programs within a GraalVM-compiled binary. GraalVM gives it its fast startup and low memory usage characteristics. Source code is not compiled to JVM bytecode first, like in Clojure on the JVM. Despite this difference, babashka aims to be as compatible as possible with the semantics of Clojure. It supports a sufficiently large subset of Clojure: functions, macros, multi-methods, namespaces, most of it is there. At the moment, the main difference with Clojure is lack of support for `deftype`, `definterface`, and `reify`. Like a JVM programmer would expect, babashka has support for multi-threading and provides access to commonly used Java packages and classes like `File`, `System`, `java.io` and `java.net`. Because babashka uses interpretation instead of compilation, some longer running programs may be slower, despite the benefit of fast startup. If that turns out to be the case, your efforts are not in vain: the code you wrote still runs with Clojure!
