--- a/src/book.adoc
+++ b/src/book.adoc
@@ -7,6 +7,7 @@ Michiel Borkent
 :coderay-css: class
 :icons: font
 :toc: left
+:toclevels: 4
 
 include::license.adoc[]
 include::contributing.adoc[]
