--- a/src/child_processes.adoc
+++ b/src/child_processes.adoc
@@ -167,7 +167,7 @@ $ test_runner_4.clj ~/projects/carve --watch
 7 tests, 19 assertions, 0 failures.
 ----
 
-==== Real life examples
+==== Real world examples
 
 * The https://github.com/borkdude/babashka/blob/5608f935cd28c777cf7d16243574558e2203872e/script/bump_version.clj#L9[babashka] repo uses `ProcessBuilder` to invoke git to make a commit after bumping the version.
   It redirects the output from `git` directly to stdout of the parent process.
