--- a/src/child_processes.adoc
+++ b/src/child_processes.adoc
@@ -31,143 +31,99 @@ output on stdout and the `:exit` code is `1`.
 For more information on `clojure.java.shell`, read the
 https://clojure.github.io/clojure/clojure.java.shell-api.html[API documentation]
 
-=== java.lang.Process(Builder)
+=== babashka.process
 
 Creating a child process with `clojure.java.shell/sh` is convenient and
 sufficient in 90% of the scripts you're going to write with babashka. For the
-remaining 10% you're going to need something slightly more powerful.
+remaining 10% you're going to need something slightly more powerful. This is
+where `babashka.process` comes in.
 
-What if we wanted to start a test runner that watches a source directory and
-executes tests whenever a file changes? Using `clojure.java.shell/sh` for this
-has a few drawbacks:
+What if we wanted to start a Clojure pREPL in our script, send commands to it
+and read the evaluated output?  Using `clojure.java.shell/sh` for this has a few
+drawbacks:
 
-- We have no control over stopping the watcher process
-- We can't see any output from the test runner until the process finishes
+- We have no control over stopping the pREPL process.
+- We can't see any output from pREPL process until it finishes.
 
-Using `java.lang.ProcessBuilder` and `java.lang.Process` gives us the extra
-power we need to overcome these limitations.
+Using `babashka.process` which leverages the `java.lang.ProcessBuilder` and
+`java.lang.Process` classes gives us the extra power we need to overcome these
+limitations.
 
-.test_runner_1.clj
+.process/prepl_1.clj
 [source,clojure]
 ----
-#!/usr/bin/env bb
-
-(import java.lang.ProcessBuilder$Redirect)
-
-(defn test-runner-watch []
-  (let [cmd ["clojure" "-A:kaocha" "-m" "kaocha.runner" "--watch"] <1>
-        pb (doto (ProcessBuilder. cmd) <2>
-             (.redirectOutput ProcessBuilder$Redirect/INHERIT)) <3>
-        proc (.start pb)] <4>
-    (-> (Runtime/getRuntime)
-        (.addShutdownHook (Thread. #(.destroy proc)))) <5>
-    proc))
-
-(.waitFor (test-runner-watch)) <6>
+include::process/prepl_1.clj[]
 ----
 
 <1> The command and its arguments
 
-<2> Construction of a `Process` is done using `ProcessBuilder`
+<2> Creating the process
 
-<3> This sends the output of the child process directly to the parent process's
-standard out.
+<3> This option redirects stdout and stdin from the parent process to the child
+process.
 
-<4> Calling `start` on a `ProcessBuilder` instance starts the process and gives
-us a `Process` instance.
+<4> This line will destroy the child process and all of it's children processes
+before the parent process exits.
 
-<5> This line will destroy the child process before the parent process exits.
+<5> Dereferencing the process waits until it ends. If
+we would not include this, our script would end immediately.
 
-<6> `waitFor` waits until the child process ends and returns its exit code. If
-we would not include this, our script would end without waiting for the watcher.
-
-When calling the script, we can see output from the test runner while it is running:
+When calling the script, we can interact with the pREPL
 
 [source,shell]
 ----
-$ test_runner_watch.clj
-[(.................)(..)]
-7 tests, 19 assertions, 0 failures.
+$ bb src/process/prepl_1.clj
+(+ 1 2 3)
+{:tag :ret, :val "6", :ns "user", :ms 5, :form "(+ 1 2 3)"}
 ----
 
-When we change a file in a source directory, the watcher is triggered and the
-tests run again.
+Pressing ctrl-C or typing `:repl/quit` will make the script terminate.
 
-What if we want to parse the output of the test runner and do something with it?
-Instead of sending the output of the child process to stdout we will have to get
-a hold of it. This is possible via https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/Process.html#getInputStream()[`getInputStream`].
+What if we want to parse the output of the prepl and reformat it to our own
+likings?  Instead of sending the output of the child process to stdout we will
+have to get a hold of it. We can grab the output by not using `:inherit` and
+getting the `:out` stream of the process. Similarly we will grab the `:in`
+stream of the process and handle reading ourselves.
 
-
-.test_runner_2.clj
+.process/prepl_2.clj
 [source,clojure]
 ----
-include::test_runner_2.clj[]
+include::process/prepl_2.clj[]
 ----
 
-<1> We ask the test runner not to output ANSI color codes which makes parsing
-the output easier
+<1> A writer that we will use to send input to the pREPL
 
-<2> Instead of forwarding the output of the child process to stdout we now grab
-it as a `java.lang.InputStream`
+<2> We read user input via `clojure.core/read-line`
 
-<3> The function `process-line` parses a line of output of the test runner and returns it as EDN data
+<3> Here we binding `*out*` to the input writer so we can use `println` to write
+to it.
 
-<4> The function `stderr` prints the line to stderr and returns it.
+<4> A reader that reads from the pREPL output. pREPL returns EDN and
+`clojure.edn/read` needs a `PushbackReader`.
 
-<5> The function `watch` starts the test-runner in watch mode and applies the
-`callback` function on succesfully parsed lines
+<5> Read the next EDN value.
 
-<6> Finally we call the `watch` function with `prn` as the callback function.
+<6> If it's not the end of the input, then we print the output using our custom
+formatting.
 
-Running this script prints EDN data to stdout and the rest of the output goes to stderr:
+Here is an example run:
 
 [source,shell]
-----
-[(.................)(..)]
-7 tests, 19 assertions, 0 failures.
-{:errors 0, :failures 0, :tests 7, :assertions 19}
-----
-
-A more interesting callback could be one that calls a notifier like https://github.com/tonsky/AnyBar[AnyBar] or https://github.com/limpbrains/somebar[somebar]:
-
-.test_runner_3.clj
-[source,clojure]
-----
-include::test_runner_3.clj[lines=47..]
-----
-
-<1> `1738` is the default AnyBar UDP port
-<2> In case of failures or errors we set AnyBar to red, else to green.
-
-In some scripts it might be desirable to set the working directory and
-environment variables of the child process. Also it might be the last step in a
-script and you just want to let it run until it finishes:
-
-.test_runner_4.clj
-[source,clojure]
-----
-include::test_runner_4.clj[]
-----
-
-<1> We interpret the first command line arg as the working directory for the test runner
-
-<2> Remaining args are passed through to the test runner
-
-<3> https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/ProcessBuilder.html#inheritIO()[`.inheritIO`] is a convenience method. According to its documentation: Sets the source and destination for subprocess
-standard I/O to be the same as those of the current Java process.
-
-<4> Here we set the child process' environment variable `CI` to `false`
-
-<5> We wait for the process to end and exit with its exit code.
-
-[source,shell]
-----
-$ test_runner_4.clj ~/projects/carve --watch
-[(.................)(..)]
-7 tests, 19 assertions, 0 failures.
-----
+---
+$ bb src/process/prepl_2.clj
+Type an expression to evaluate:
+(+ 1 2 3)
+(+ 1 2 3) evaluates to 6
+Type an expression to evaluate:
+(/ 1 2 3)
+(/ 1 2 3) evaluates to 1/6
+Type an expression to evaluate:
+:repl/quit
+---
 
 ==== Real world examples
+
+Prior to `babashka.process` people were using raw `ProcessBuilder` interop. Here are some real world examples. These might get updated to `babashka.process` in the future.
 
 * The https://github.com/borkdude/babashka/blob/5608f935cd28c777cf7d16243574558e2203872e/script/bump_version.clj#L9[babashka] repo uses `ProcessBuilder` to invoke git to make a commit after bumping the version.
   It redirects the output from `git` directly to stdout of the parent process.
