--- a/src/child_processes.adoc
+++ b/src/child_processes.adoc
@@ -40,15 +40,11 @@ where the `babashka.process` library namespace comes in. The README and source
 code of this library is located https://github.com/babashka/process[here].
 
 What if we wanted to start a Clojure pREPL in our script, send commands to it
-and read the evaluated output?  Using `clojure.java.shell/sh` for this has a few
-drawbacks:
-
-- We have no control over stopping the pREPL process.
-- We can't see any output from pREPL process until it finishes.
-
+and read the evaluated output in a loop?  Using `clojure.java.shell/sh` for this
+has the limitation that we can only send input and read output once per process.
 Using `babashka.process` which leverages the `java.lang.ProcessBuilder` and
-`java.lang.Process` classes gives us the extra power we need to overcome these
-limitations.
+`java.lang.Process` classes gives us the extra power we need to overcome this
+limitation.
 
 .process/prepl_1.clj
 [source,clojure]
