--- a/src/getting_started.adoc
+++ b/src/getting_started.adoc
@@ -1,6 +1,8 @@
 [[getting_started]]
 == Getting started
 
+by Michiel Borkent
+
 === Installation
 
 Installing babashka is as simple as downloading the binary for your platform and
