--- a/src/book.adoc
+++ b/src/book.adoc
@@ -14,6 +14,7 @@ include::contributing.adoc[]
 include::intro.adoc[]
 include::getting_started.adoc[]
 include::usage.adoc[]
+include::features.adoc[]
 include::child_processes.adoc[]
 
 //include::shell_integration.adoc[]
